[gd_scene load_steps=2 format=3 uid="uid://cw2141wvvyk2j"]

[ext_resource type="Script" path="res://pages/traits_test.gd" id="1_jhys2"]

[node name="Node" type="Node"]
script = ExtResource("1_jhys2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 800.0
offset_bottom = 624.0
current_tab = 0
tabs_visible = false
deselect_enabled = true

[node name="Character" type="Control" parent="Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="titel" type="Label" parent="Control/TabContainer/Character"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0104167
anchor_top = 0.0135135
anchor_right = 0.208333
anchor_bottom = 0.0675676
text = "<CHARACTER>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Character"]
layout_mode = 0
offset_left = 64.0
offset_top = 65.0
offset_right = 352.0
offset_bottom = 257.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "<CLASS>"
horizontal_alignment = 2
vertical_alignment = 1

[node name="class" type="Label" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "None"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "<SEX>"
horizontal_alignment = 2
vertical_alignment = 1

[node name="man" type="CheckBox" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
button_pressed = true
text = "<MAN>"
alignment = 1

[node name="woman" type="CheckBox" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "<WOMAN>"
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/TabContainer/Character/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer3"]
clip_contents = true
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "<TRIBE>"
horizontal_alignment = 2
vertical_alignment = 1

[node name="setect" type="OptionButton" parent="Control/TabContainer/Character/VBoxContainer/HBoxContainer3"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "<HUMAN>"
popup/item_0/id = 0
popup/item_1/text = "<HATFCAT>"
popup/item_1/id = 1
popup/item_2/text = "<LIZARD>"
popup/item_2/id = 2
popup/item_3/text = "<ELF>"
popup/item_3/id = 3
popup/item_4/text = "<DARKELF>"
popup/item_4/id = 4

[node name="ItemList" type="ItemList" parent="Control/TabContainer/Character"]
layout_mode = 0
offset_left = 416.0
offset_top = 65.0
offset_right = 672.0
offset_bottom = 385.0
text_overrun_behavior = 1

[node name="next" type="Button" parent="Control/TabContainer/Character"]
layout_mode = 0
offset_left = 656.0
offset_top = 513.0
offset_right = 744.0
offset_bottom = 544.0
text = "Next"

[node name="Traits" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="titel" type="Label" parent="Control/TabContainer/Traits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0104167
anchor_top = 0.0135135
anchor_right = 0.208333
anchor_bottom = 0.0675676
text = "Traitel"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="traits_good" type="Panel" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 352.0
offset_top = 41.0
offset_right = 672.0
offset_bottom = 257.0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Traits/traits_good"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Traits/traits_good/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Traits/traits_good/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="traits_bad" type="Panel" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 352.0
offset_top = 282.0
offset_right = 672.0
offset_bottom = 505.0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Traits/traits_bad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Traits/traits_bad/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Traits/traits_bad/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="use_traits" type="Panel" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 8.0
offset_top = 161.0
offset_right = 328.0
offset_bottom = 417.0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Traits/use_traits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Traits/use_traits/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Traits/use_traits/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="available_points" type="Panel" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 10.0
offset_top = 77.0
offset_right = 330.0
offset_bottom = 135.0

[node name="Label" type="Label" parent="Control/TabContainer/Traits/available_points"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.065625
anchor_top = 0.310345
anchor_right = 0.425
anchor_bottom = 0.706897
grow_horizontal = 2
grow_vertical = 2
text = "Available Point"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Control/TabContainer/Traits/available_points"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.728125
anchor_top = 0.293103
anchor_right = 0.953125
anchor_bottom = 0.689655
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="tg" type="Label" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 352.0
offset_top = 17.0
offset_right = 442.0
offset_bottom = 40.0
text = "Traits Good"

[node name="tg2" type="Label" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 352.0
offset_top = 257.0
offset_right = 442.0
offset_bottom = 280.0
text = "Traits Bad"

[node name="next" type="Button" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 656.0
offset_top = 513.0
offset_right = 744.0
offset_bottom = 544.0
text = "Next"

[node name="Back" type="Button" parent="Control/TabContainer/Traits"]
layout_mode = 0
offset_left = 16.0
offset_top = 513.0
offset_right = 104.0
offset_bottom = 544.0
text = "<BACK>"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 816.0
offset_top = 64.0
offset_right = 1136.0
offset_bottom = 576.0

[node name="StatusContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0625
anchor_right = 0.975
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Status" type="Label" parent="Control/Panel/StatusContainer"]
layout_mode = 2
text = "<STATUS>"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/StatusContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="hp" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<HP>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="hpnum" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="hp_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="mana" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<MANA>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="mana_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="mana_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Stamina" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer3"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<STAMINA>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Stamina_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer3"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="stamina_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer3"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Power" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer4"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<POWER>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Power_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer4"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="power_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer4"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Sanity" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer5"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<SANITY>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sanity_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer5"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sanity_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer5"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Maintenance" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer6"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<MAINTENANCE>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Maintenance_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer6"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="maintenance_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer6"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Speaking" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer7"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<SPEAKING_SKILLS>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Speaking_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer7"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="speaking_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer7"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Charm" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer8"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<CHARN>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Charm_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer8"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="charm_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer8"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HBoxContainer9" type="HBoxContainer" parent="Control/Panel/StatusContainer"]
layout_mode = 2
alignment = 1

[node name="Fluent" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer9"]
clip_contents = true
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
text = "<FLUENT>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Fluent_num" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer9"]
clip_contents = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="fluent_plus" type="Label" parent="Control/Panel/StatusContainer/HBoxContainer9"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "  "
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Control/Panel/StatusContainer"]
layout_mode = 2

[connection signal="pressed" from="Control/TabContainer/Character/VBoxContainer/HBoxContainer2/man" to="." method="_on_man_pressed"]
[connection signal="pressed" from="Control/TabContainer/Character/VBoxContainer/HBoxContainer2/woman" to="." method="_on_woman_pressed"]
[connection signal="item_selected" from="Control/TabContainer/Character/VBoxContainer/HBoxContainer3/setect" to="." method="_on_setect_tribe_selected"]
[connection signal="item_selected" from="Control/TabContainer/Character/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Control/TabContainer/Character/next" to="." method="_on_next_info_pressed"]
[connection signal="pressed" from="Control/TabContainer/Traits/Back" to="." method="_on_back_to_info_pressed"]
